helen edits, previous client duplications taken out.

--- a/previous-clients.html
+++ b/previous-clients.html
@@ -62,109 +62,126 @@
       </div>
     </nav>
     <main>
-		       
-		<div class="cushycms">
-            <h3>Previous clients</h3>
+        <div class="cushycms"><h3>Clients</h3>
 
-            <p>Since 1997, <strong>Helen Grzyb and Associates</strong> have worked with an extensive group of clients in government, not for profit and industry sectors. We have successfully completed projects for clients such as:</p>
+        <p>Since 1997, <strong>Helen Grzyb and Associates</strong> have worked with an extensive group of clients in government, not for profit and industry sectors. We have successfully completed projects for diverse clients:</p>
+        <strong>Public Sector</strong>
 
-            <ul>
-                <li>Aged and Community Services WA</li>
-                <li>Aged Care Standards and Accreditation Agency</li>
-                <li>ACROD WA (now NDS)</li>
-                <li>Advocare Inc</li>
-                <li>Australian Public Service Commission</li>
-                <li>Baptistcare Inc</li>
+        <ul>
+                <li>Aged Care Standards and Accreditation Agency&nbsp;(Federal Government)&nbsp;</li>
+                <li>Agriculture Forestry and Fisheries Australia&nbsp;(Federal Government)</li>
+                <li>Australian Public Service Commission&nbsp;(Federal Government)</li>
                 <li>City of Cockburn</li>
                 <li>City of Fremantle</li>
                 <li>City of Melville</li>
                 <li>City of Nedlands</li>
                 <li>City of Swan</li>
-                <li>City of Swan Aged Care Services Inc</li>
-                <li>Clough Projects Pty Ltd</li>
-                <li>Commonwealth Department of Health and Family Services</li>
-                <li>Communicare Inc</li>
-                <li>CommunityWest Inc</li>
-                <li>Conservation Council of WA Inc</li>
-                <li>Curtin University of Technology &ndash; the Curtin Consultancy Service, and the Small Business Unit</li>
+                <li>Curriculum Council of Western Australia</li>
+                <li>Public Sector Management Program (Federal Government)</li>
                 <li>Department of the Attorney General</li>
                 <li>Department of Commerce</li>
+                <li>Department of Communities (including Disability Services)</li>
                 <li>Department of Environmental Protection</li>
-                <li>Department of Employment, Workplace Relations and Small Business</li>
-                <li>Department of Finance, Funding and Contracting Services Unit</li>
+                <li>Department of Employment, Workplace Relations and Small Business&nbsp;(Federal Government)</li>
+                <li>Department of Finance, (Funding and Contracting Services Unit)</li>
+                <li>Department of Health and Family Services (Federal Government)</li>
                 <li>Department of Housing and Works</li>
                 <li>Department of Industry and Resources</li>
                 <li>Department of Justice
-                    <ul>
-                        <li>Office of the Public Advocate</li>
-                        <li>Corporate Services</li>
-                        <li>Family Court</li>
-                        <li>Office of the Chief Justice</li>
-                        <li>Aboriginal Alternative Dispute Resolution Office</li>
-                    </ul>
-                    </li>
+                <ul>
+                    <li>Office of the Public Advocate</li>
+                    <li>Corporate Services</li>
+                    <li>Family Court</li>
+                    <li>Office of the Chief Justice</li>
+                    <li>Aboriginal Alternative Dispute Resolution Office</li>
+                </ul>
+                </li>
                 <li>Department of Land Information</li>
                 <li>Department of Local Government, Sport and Cultural Industries</li>
                 <li>Department of the Premier and Cabinet
-                    <ul>
-                        <li>Office of Development Approvals Coordination,</li>
-                        <li>Workforce Development,</li>
-                        <li>Public Sector Management, and</li>
-                        <li>Office of Citizens and Civics</li>
-                    </ul>
-                    </li>
-                <li>DADAA (WA) Inc</li>
-                <li>Disability Services Commission</li>
-                <li>Curriculum Council of Western Australia</li>
-                <li>Curtin University
-                    <ul>
-                        <li>Graduate School of Business,</li>
-                        <li>Entrepreneurship Unit,</li>
-                        <li>Curtin Consultancy Service, and</li>
-                        <li>Small Business Unit</li>
-                    </ul>
+                <ul>
+                    <li>Office of Development Approvals Coordination,</li>
+                    <li>Workforce Development,</li>
+                    <li>Public Sector Management, and</li>
+                    <li>Office of Citizens and Civics</li>
+                </ul>
                 </li>
-                <li>Data Analysis Australia</li>
                 <li>East Perth Redevelopment Authority</li>
-                <li>Economic Consulting Services</li>
-                <li>Environs Consulting</li>
-                <li>Grower Group Alliance Inc</li>
-                <li>General Practitioner Network of WA Inc</li>
                 <li>Health Department of W.A.</li>
-                <li>IIR Conferences</li>
-                <li>Institute of Public Administration Australia (WA) Inc</li>
                 <li>LandCorp</li>
                 <li>Landgate</li>
                 <li>Main Roads WA</li>
-                <li>Ngala Family Resource Centre Inc</li>
-                <li>OPTUM Group Pty Ltd</li>
-                <li>Palassis Architects</li>
-                <li>People with Disabilities (WA) Inc</li>
-                <li>People Who Care Inc</li>
-                <li>Phoenix International Language Academy</li>
-                <li>PPK Environment and Infrastructure</li>
-                <li>Police and Citizen's Youth Clubs</li>
-                <li>Public Sector Management Program (Federal Government)</li>
-                <li>Regional Plantation Committees of WA and Agriculture Forestry and Fisheries Australia</li>
-                <li>Rocky Bay Inc</li>
                 <li>Small Business Development Corporation</li>
-                <li>Social Systems and Evaluation</li>
-                <li>Spowers Architects</li>
-                <li>St Mary's Anglican Girls' School</li>
-                <li>Swan Catchment Council</li>
-                <li>The Aged Persons Support Service Inc</li>
-                <li>The Aged Care Standards and Accreditation Agency</li>
-                <li>The Planning Group</li>
-                <li>Timber 2002 and Department of Employment, Workplace Relations and Small Business</li>
-                <li>University of Notre Dame Australia</li>
-                <li>University of Western Australia</li>
-                <li>WA Council of Social Services</li>
                 <li>WA Land Information System</li>
                 <li>Water and Rivers Commission</li>
-                <li>West Coast TAFE</li>
+            </ul>
+            <strong>Private sector</strong>
+
+            <ul>
+                <li>Clough Projects Pty Ltd</li>
+                <li>Data Analysis Australia</li>
+                <li>Economic Consulting Services</li>
+                <li>Environs Consulting</li>
+                <li>IIR Conferences</li>
+                <li>OPTUM Group Pty Ltd</li>
+                <li>Palassis Architects</li>
+                <li>PPK Environment and Infrastructure</li>
+                <li>The Planning Group</li>
+                <li>Social Systems and Evaluation</li>
+                <li>Spowers Architects</li>
+            </ul>
+            <strong>Incorporated organisations</strong>
+
+            <ul>
+                <li>Aged and Community Services WA</li>
+                <li>ACROD WA (now NDS)</li>
+                <li>Advocare Inc</li>
+                <li>Baptistcare Inc</li>
+                <li>City of Swan Aged Care Services Inc</li>
+                <li>Communicare Inc</li>
+                <li>CommunityWest Inc</li>
+                <li>Conservation Council of WA Inc</li>
+                <li>DADAA (WA) Inc
+                <ul>
+                </ul>
+                </li>
+                <li>Grower Group Alliance Inc
+                <ul>
+                </ul>
+                </li>
+                <li>General Practitioner Network of WA Inc</li>
+                <li>Institute of Public Administration Australia (WA) Inc</li>
+                <li>Ngala Family Resource Centre Inc</li>
+                <li>Nulsen Group (As We Are)</li>
+                <li>People with Disabilities (WA) Inc</li>
+                <li>People Who Care Inc</li>
+                <li>Police and Citizen&#39;s Youth Clubs</li>
+                <li>Regional Plantation Committees of WA&nbsp;</li>
+                <li>Rocky Bay Inc</li>
+                <li>Swan Catchment Council</li>
+                <li>The Aged Persons Support Service Inc</li>
+                <li>Timber 2002</li>
+                <li>WA Council of Social Services</li>
                 <li>Yanndina Inc</li>
             </ul>
-        </div>
+            <strong>Education institutions - secondary/tertiary/vocational&nbsp;</strong>
+
+            <ul>
+                <li>Curtin University
+                <ul>
+                    <li>Graduate School of Business,</li>
+                    <li>Entrepreneurship Unit,</li>
+                    <li>Curtin Consultancy Service, and</li>
+                    <li>Small Business Unit</li>
+                </ul>
+                </li>
+                <li>Phoenix International Language Academy</li>
+                <li>St Mary&#39;s Anglican Girls&#39; School</li>
+                <li>University of Notre Dame Australia</li>
+                <li>University of Western Australia</li>
+                <li>West Coast TAFE</li>
+            </ul>
+            </div>
 
        
     </main>
