--- a/case-studies.html
+++ b/case-studies.html
@@ -60,8 +60,7 @@
     <div>
     <h3>Case studies</h3>
     </div>    
-
-    <div class="accordion" id="accordionExample">
+<div class="accordion" id="accordionExample">
       <div class="card">
         <div class="card-header" id="headingOne">
           <h2 class="mb-0">
@@ -105,10 +104,50 @@
              </div>
           </div>
 
+          <div class="card">
+            <div class="card-header" id="headingTwo">
+              <h2 class="mb-0">
+                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">title </button>
+              </h2>
+            </div>
+            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+              <div class="card-body">
+                    <h5 class="card-title">2018 - Home based aged care packages in the Mid West region of Western Australia
+Access by Aboriginal People – A Snapshot</h5>
+
+
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="card"> 
+            <div class="card-header" id="headingThree">
+              <h2 class="mb-0">
+                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                 2018 - Home based aged care packages in the Mid West region of Western Australia: Access by Aboriginal People – A Snapshot
+                </button>
+              </h2>
+            </div>
+            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                <div class="card-body">
+
+                  <h5 class="card-title">2018 - Home based aged care packages in the Mid West region of Western Australia</h5>
+                  <h5>Access by Aboriginal People – A Snapshot</h5>
+                  <p>Key staff from Geraldton Regional Aboriginal Medical Service (GRAMS) and WA Country Health Service (WACHS) Mid West recognised that there were possible gaps in Aboriginal people having access to home based aged care packages in their region. Informal conversations with colleagues from service providers across the Mid West confirmed this.</p>
+                  <p>As a result, the WA Primary Health Alliance funded a project to undertake a snapshot picture about the reality for Aboriginal people in the three localities in the region and about people’s access to home based aged care packages.</p>
+                  <p>The project was hosted by GRAMS and supported by a project advisory committee comprising staff from GRAMS, WACHS (Mid West), Aboriginal Health Council of Western Australia (AHCWA), Bethanie, Carnarvon Medical Service Aboriginal Corporation (CMSAC).</p>
+                  <p>Helen Grzyb and Associates were appointed to undertake the project in mid 2018.</p>
+                  <p>There was significant buy in from a diverse range of stakeholders. People in government and in the community across the region wanted to work out how best to make a difference for those older Aboriginal people who are eligible but currently outside the home-based aged care system. </p>
+                  <p>A key construct from the project was for a service model which ensures clients are culturally safe – it was seen that this will shift the existing resistance by people to being engaged in the aged care system. As a result of the 2018 project, a trial was established for a centre-based service for people in the Geraldton local community. If successful, this trial could lead the way to significantly change access to home-based services, thus making a positive impact on the quality of life for people in the Mid West region.</p>
+               </div>
+            </div>
+          </div>
+
             <div class="card">
             <div class="card-header" id="headingFour">
               <h2 class="mb-0">
-                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">Baptistcare 2012</button>
+                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">Baptistcare 2012</button>
               </h2>
             </div>
             <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
@@ -125,7 +164,6 @@
             </div>
           </div>
         </div>
-      </main>  
 
        <div class="jumbotron" id="contact">
           <h2>Ready to get in touch?</h2><br>
