nedlands case study added

--- a/case-studies.html
+++ b/case-studies.html
@@ -107,15 +107,16 @@
           <div class="card">
             <div class="card-header" id="headingTwo">
               <h2 class="mb-0">
-                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">title </button>
+                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Review of community engagement - City of Nedlands </button>
               </h2>
             </div>
             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
               <div class="card-body">
-                    <h5 class="card-title">2018 - Home based aged care packages in the Mid West region of Western Australia
-Access by Aboriginal People – A Snapshot</h5>
-
-
+                    <h5 class="card-title">Review of community engagement - City of Nedlands</h5>
+                    <p>In 2019, Helen Grzyb and Associates were appointed by the City of Nedlands to undertake an independent review of its public participation activities.</p>
+                    <p>As well as reviewing the City’s community engagement, the review also assessed the City’s compliance with the Disability Services Regulations (2004) - public participation.</p>
+                    <p>The review tools used were the International Association of Public Participation Quality Standard and the Disability Services Regulations (2004) public participation checklist.</p>
+                    <p>The results of the review were positive, reinforcing the City’s engagement processes and its provisions for information, engagement and consideration in decision-making. Improvements were identified which could continue to reinforce and enhance the robust community engagement ethos and practices undertaken by the City including accessibility for people with a disability.</p>
                 </div>
               </div>
             </div>
@@ -140,6 +141,10 @@ Access by Aboriginal People – A Snapshot</h5>
                   <p>Helen Grzyb and Associates were appointed to undertake the project in mid 2018.</p>
                   <p>There was significant buy in from a diverse range of stakeholders. People in government and in the community across the region wanted to work out how best to make a difference for those older Aboriginal people who are eligible but currently outside the home-based aged care system. </p>
                   <p>A key construct from the project was for a service model which ensures clients are culturally safe – it was seen that this will shift the existing resistance by people to being engaged in the aged care system. As a result of the 2018 project, a trial was established for a centre-based service for people in the Geraldton local community. If successful, this trial could lead the way to significantly change access to home-based services, thus making a positive impact on the quality of life for people in the Mid West region.</p>
+
+                  <img src="img/GRAMS-map.jpg">
+                  <p class="text-muted">Source: DoH, Epidemiology GIS Branch 2015</p>
+
                </div>
             </div>
           </div>
