new case studies edits

--- a/case-studies.html
+++ b/case-studies.html
@@ -77,9 +77,8 @@
                 <a href="https://www.bgeeng.com/sc-traffic-design/40-market-sectors/ms-transport/mst-traffic-design/329-gateway-vision-wa?tmpl=component">
                     <img class="card-img-top" src="img/gateway.jpg" alt="gateway highway">
                 </a>
-
                 <h7 class="text-muted">Gateway Vision WA. Image source: https://www.bgeeng.com/sc-traffic-design/40-market-sectors/ms-transport/mst-traffic-design/329-gateway-vision-wa?tmpl=component </h7>
-
+                <h5 class="card-title">Case study &ndash; infrastructure/local government engagement review</h5>
                 <p> In 2006, Dr Helen Grzyb was part of the original Main Roads WA (MRWA) Value Assurance Review team which tested the first Value Assurance Review (VAR) of MRWA stakeholder engagement. As a result of this work, Helen is an accredited MRWA VAR Reviewer. Subsequently Helen went on to undertake a further five reviews for MRWA projects:</p>
 
                 <ul>
@@ -117,6 +116,7 @@
                     <p>As well as reviewing the City’s community engagement, the review also assessed the City’s compliance with the Disability Services Regulations (2004) - public participation.</p>
                     <p>The review tools used were the International Association of Public Participation Quality Standard and the Disability Services Regulations (2004) public participation checklist.</p>
                     <p>The results of the review were positive, reinforcing the City’s engagement processes and its provisions for information, engagement and consideration in decision-making. Improvements were identified which could continue to reinforce and enhance the robust community engagement ethos and practices undertaken by the City including accessibility for people with a disability.</p>
+                    <img src="img/nedlands.png">
                 </div>
               </div>
             </div>
@@ -152,12 +152,12 @@
             <div class="card">
             <div class="card-header" id="headingFour">
               <h2 class="mb-0">
-                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">Baptistcare 2012</button>
+                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">Baptistcare 2012 - stakeholder engagement</button>
               </h2>
             </div>
             <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
               <div class="card-body">
-                  
+                     <h5 class="card-title">Baptistcare 2012</h5>
                     <p>In 2012, Helen Grzyb and Associates were appointed to undertake a review of Baptistcare's contract with the Town of Brookton for management of the Kalkarni Aged Care facility.</p>
 
                     <p>The work involved reviewing documentation including contracts and financial reports, undertaking workshops and meeting with key stakeholders of the residential aged care service as well as the adjacent medical service.</p>
