--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
       </div>
     </nav>
 
-
     <main>
       <div class="cushycms">
         <p>Helen Grzyb and Associates is a unique consultancy offering sustainable solutions to community and government organisations since 1997.</p>
@@ -76,7 +75,7 @@
 
       <div class="container cushycms"><div class="row">
       <div class="col-xs-12 col-sm-6 col-md-3">
-      <div class="card"><img alt="website icon" src="./img/target-1.svg" width="100">
+      <div class="card green-top"><img alt="website icon" src="./img/target-1.svg" width="100">
       <h2>Research and policy review</h2>
 
       <p>Helen can conduct independent reviews and evaluations of policies/programs<strong>.</strong>&nbsp;</p>
@@ -84,7 +83,7 @@
       </div>
 
       <div class="col-xs-12 col-sm-6 col-md-3">
-      <div class="card"><img alt="speech bubbles" src="./img/light-bulb.svg" width="100">
+      <div class="card green-top"><img alt="speech bubbles" src="./img/light-bulb.svg" width="100">
       <h2>Strategic planning</h2>
 
       <p>We develop strategic and business plans for organisations seeking to position themselves optimally in the future.</p>
@@ -92,14 +91,14 @@
       </div>
 
       <div class="col-xs-12 col-sm-6 col-md-3">
-      <div class="card"><img alt="speech bubbles" src="./img/teamwork-4.svg" width="100">
+      <div class="card green-top"><img alt="speech bubbles" src="./img/teamwork-4.svg" width="100">
       <h2>Stakeholder engagement</h2>
       <p>With recognised expertise in stakeholder engagement throughout WA, we also provide engagement reviews to identify improvements in this key organisational process.&nbsp;</p>
       </div>
       </div>
 
       <div class="col-xs-12 col-sm-6 col-md-3">
-      <div class="card"><img alt="earth icon" src="./img/working.svg" width="100">
+      <div class="card green-top"><img alt="earth icon" src="./img/working.svg" width="100">
       <h2>Governance advisory</h2>
 
       <p>We work with boards to optimise policies for the future, identify board skills and capacity requirements, manage risk, build sustainable plans and organisations.</p>
@@ -107,7 +106,7 @@
       </div>
 
       <div class="col-xs-12 col-sm-6 col-md-3">
-      <div class="card"><img alt="speech bubbles" src="./img/shake-hands.svg" width="100">
+      <div class="card green-top"><img alt="speech bubbles" src="./img/shake-hands.svg" width="100">
       <h2>Executive coaching</h2>
 
       <p>As executive coach, Helen has a very effective approach in gaining people's trust, teasing out barriers to adoption of change and new approaches, and is experienced in coaching people from government or not for profit organisations.</p>
