--- a/expertise.html
+++ b/expertise.html
@@ -60,50 +60,49 @@
       </div>
     </nav>
     <main>
-        <div class="cushycms">
-            <h3>Expertise</h3>
-            <h5><strong>Strategic plans</strong></h5>
-            <p>We have delivered or been part of a multi disciplinary team for strategic plans in areas such as:</p>
+        <h5><strong>Strategic plans</strong></h5>
 
-            <ul>
-                <li>Community and children's services</li>
-                <li>Local government</li>
-                <li>Heritage planning</li>
-                <li>WA public sector management</li>
-                <li>Aged care (community and residential)</li>
-                <li>WA public sector operations (Justice, Health, Education)</li>
-            </ul>
-        </div>
+<p>We have delivered&nbsp;strategic plans such as for:</p>
+
+<ul>
+  <li>Community and children&#39;s services</li>
+  <li>Local government</li>
+  <li>Heritage planning</li>
+  <li>WA public sector management</li>
+  <li>Aged care (community and residential)</li>
+  <li>WA public sector operations (Justice, Health, Education)</li>
+</ul>
+</div>
         <br>
 
-        <div class="cushycms">
-            <h5><strong>Research and policy review</strong></h5>
+        <div class="cushycms"><h5><strong>Research and policy review</strong></h5>
 
-            <p>We work with expert colleagues to collectively provide a complete suite of research and analysis services. Examples include statistical analysis, stakeholder analysis and engagement, legislative/policy analysis, or national/international benchmark comparisons.
+<p>We work with expert colleagues to collectively provide a complete suite of research and analysis services including statistical analysis, stakeholder analysis and engagement, legislative/policy analysis, or national/international benchmark comparisons.</p>
 
-            <p>Since 1997, we have advised a host of federal, state and local government agencies as well as peak and service delivery organisations in the not for profit sector. We have delivered research and policy reviews on subjects like:</p>
+<p>Since 1997, we have advised a host of federal, state and local government agencies as well as peak and service delivery organisations in the not for profit sector. We have delivered research and policy reviews on subjects like:</p>
 
-            <ul>
-                <li>Stakeholder engagement</li>
-                <li>Civics</li>
-                <li>Communities</li>
-                <li>Aged care</li>
-                <li>People with a disability</li>
-                <li>Provision of housing</li>
-                <li>Environment/water</li>
-                <li>Regions/local government</li>
-                <li>Heritage master planning (including World Heritage)</li>
-                <li>Aboriginal people</li>
-                <li>Recreation</li>
-                <li>Consumer affairs</li>
-                <li>Infrastructure</li>
-                <li>Industry development</li>
-            </ul>
+<ul>
+  <li>Stakeholder engagement</li>
+  <li>Civics</li>
+  <li>Communities</li>
+  <li>Aged care</li>
+  <li>People with a disability</li>
+  <li>Provision of housing</li>
+  <li>Environment/water</li>
+  <li>Regions/local government</li>
+  <li>Heritage master planning (including World Heritage)</li>
+  <li>Aboriginal people</li>
+  <li>Recreation</li>
+  <li>Consumer affairs</li>
+  <li>Infrastructure</li>
+  <li>Industry development</li>
+</ul>
 
-            <p>Dr Helen Grzyb's expertise is recognised with her appointment as post-graduate lecturer in stakeholder engagement, and appointments delivering workshops on public sector ethics, influencing skills, and stakeholder engagement.</p>
-        </div>
+<p>Dr Helen Grzyb&#39;s unique expertise is recognised with her appointment as post-graduate lecturer in stakeholder engagement, and appointments delivering workshops on public sector ethics, influencing skills, and stakeholder engagement.</p>
+
+</div>
         <br>
-        <div id="strategic-plans cushycms">
+        <div class="cushycms" id="strategic-plans">
            <h5><strong>Governance advisory</strong></h5>
            <p>We work with boards to optimise policies for the future, identify board skills and capacity requirements, manage risk, build sustainable plans and organisations. Dr Helen Grzyb is a Fellow of the Australian Institute of Company Directors. With over 30 years' experience as a community or state government board member she is perfectly positioned to offer governance advisory services. Her experience in governance includes:</p>
 
@@ -118,11 +117,12 @@
             </ul>
         </div>
         <br>    
-        <div id="exec-coaching cushycms">
+        <div class="cushycms" id="exec-coaching">
             <h5><strong>Executive coaching</strong></h5>
 
             <p>As executive coach, Helen has a very effective approach in gaining people's trust, teasing out barriers to adoption of change and new approaches, and is experienced in coaching people from government or not for profit organisations. Successful coaching assignments have covered sectors such as:<br>The West Australian public sector (Treasury, Small business, Justice)</p>           
         </div>
+
       
     </main>
       <div class="jumbotron" id="contact">
