--- a/case-studies.html
+++ b/case-studies.html
@@ -169,6 +169,7 @@
             </div>
           </div>
         </div>
+      </main>
 
        <div class="jumbotron" id="contact">
           <h2>Ready to get in touch?</h2><br>
