added contact form to contact.html

--- a/contact.html
+++ b/contact.html
@@ -1,88 +1,77 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Helen Grzyb & Associates</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+     <title>Helen Grzyb & Associates</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Source+Code+Pro:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400&display=swap" rel="stylesheet">
+     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
     <meta name="google-site-verification" content="wpJhZ22qKAdN4Yge35cSDtZ4FLtKsXFSBehh2rjQYcA" />
 </head>
 
 <header>
-        <a href="index.html"> <img id="logo" src="logo.png"></a>
-            <div id="navbar">
-                <ul>
-                <li><a href="#services">Service offerings</a></li>        
-                <li><a href="#about">About</a></li>      
-                <li><a href="#news">News</a></li>
-                <li><a href="#case-studies">Case studies</a></li>
-                <li><a href="#testimonials">Testimonials</a></li>
-                <li><a href="#contact">Contact</a></li>  
-                </ul>
-            </div>
+    <a href="index.html"> <img id="logo" src="logo.png"></a>
 </header>
 
 <body>
-    <h1>Contact</h1>
 
-    <p>Drop us a line at <a href="mailto:helen@helengrzyb.com.au">contact@helengrzyb.com.au</a> or use our form below:</p>
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
 
-    <form method="post">
+      <nav class="navbar sticky-top navbar-expand-sm navbar-dark bg-dark">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-        <label for="name">Name:</label>
-        <input id="name" type="text"><br>
-        <label for="email">Email:</label>
-        <input id="email" type="email" name="email" required><br>
-        <label for="tel" id="tel">Telephone:</label>
-        <input id="tel" type="tel" name="email-address"> <br>
-        <label for="reason-for-contact">Reason for getting in touch: </label>
-        <input list="reasons" id="myreasons" name="reasons-for-contact">
-        <datalist id="reasons">
-                <option value="Request for quote">
-                <option value="Workshops and functions">
-                <option value="Executive coaching">
-                <option value="Strategic plan">
-                <option value="Not for profit project">
-                <option value="Statistical analysis">
-                <option value="Other">
-            </datalist>   <br> 
-        <label for="text">Message:</label>
-        <textarea id="message" name="message" rows="10" columns="100" placeholder="text here"></textarea><br>
-        <input type="submit" value="submit">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+          </li>
+           <li class="nav-item">
+            <a class="nav-link" href="expertise.html">Expertise</a>
+          </li>
 
-    </form>
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">About</a>
+          </li>
+            <li class="nav-item">
+            <a class="nav-link" href="case-studies.html">Case studies</a>
+          </li>
+           </li>
+            <li class="nav-item">
+            <a class="nav-link" href="previous-clients.html">Previous clients</a>
+          </li>
 
-    <section id="contact">
-            <h2> Contact</h2>
+          <li class="nav-item">
+            <a class="nav-link" href="index.html#news">News</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="index.html#contact">Contact</a>
+          </li>
+              </ul>
+          <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link" href="mailto:contact@helengrzyb.com.au"><i class="far fa-envelope"></i></li></a>
+          <li class="nav-item"><a class= "nav-link" href="tel:0411722613‬"><i class="fas fa-phone"></i></a></li>
+        </ul>
+     
+      </div>
+    </nav>
 
-            <glyphicon class="glyphicon glyphicon-envelope"></glyphicon>
-            <a href="mailto:helen@helengrzyb.com.au">contact@helengrzyb.com.au</a><br> 
-            <glyphicon class="glyphicon glyphicon-earphone"></glyphicon>
-            0414 444 444<br>
-            <p>or drop us a line here:</p>
-
-            <form>
-                <div class="form-group">
-                    <label for="exampleInputEmail1">Email:</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputEmail1">Your message</label>
-                <textarea class="form-control" id="enquiry" placeholder="Your message"></textarea>
-                </div>
-                <div class="checkbox">
-                    <label>
-                    <input type="checkbox"> I agree to the <a href="privacy-policy.html">privacy policy.</a>
-                    </label>
-                </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
-        </section>
+        <div class="typeform-widget" data-url="https://rob317012.typeform.com/to/jtelbX" style="width: 100%; height: 500px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> powered by <a href="https://admin.typeform.com/signup?utm_campaign=jtelbX&utm_source=typeform.com-01E4WNGVZST1XMTQC6H7P85V55-free&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=EN" style="color: #999" target="_blank">Typeform</a> </div>
 
 </body>
 
-<footer></footer>
+    <footer>
+        <ul class="list-inline">
+          <li class="list-inline-item"><a href="https://www.linkedin.com/in/helengrzyb/"><i class="fab fa-linkedin"></i></a></li>
+        </ul>
+
+        <div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/"     title="Flaticon">www.flaticon.com</a></div>
+    </footer>
 
 </html>
