new jumbotron, links updated to point to form

--- a/case-studies.html
+++ b/case-studies.html
@@ -46,7 +46,7 @@
             <a class="nav-link" href="index.html#news">News</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="case-studies.html#contact">Contact</a>
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
               </ul>
           <ul class="navbar-nav">
@@ -59,8 +59,9 @@
   <main>
     <div>
     <h3>Case studies</h3>
-    </div>    
-<div class="accordion" id="accordionExample">
+    
+
+  <div class="accordion" id="accordionExample">
       <div class="card">
         <div class="card-header" id="headingOne">
           <h2 class="mb-0">
@@ -171,11 +172,11 @@
         </div>
       </main>
 
-       <div class="jumbotron" id="contact">
-          <h2>Ready to get in touch?</h2><br>
-          <a href="mailto:contact@helengrzyb.com.au" class="btn btn-primary">contact@helengrzyb.com.au</a><br> 
+     <div class="jumbotron" id="contact">
+            <h2>Ready to get in touch?</h2><br>
+            <a href="contact.html" class="btn btn-primary">Drop us a line</a>
       </div>
-
+      
       <footer>
           <ul class="list-inline">
             <li class="list-inline-item"><a href="https://www.linkedin.com/in/helengrzyb/"><i class="fab fa-linkedin"></i></a></li>
