--- a/about.html
+++ b/about.html
@@ -51,14 +51,14 @@
             <a class="nav-link" href="index.html#news">News</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html#contact">Contact</a>
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
               </ul>
           <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link" href="mailto:contact@helengrzyb.com.au"><i class="far fa-envelope"></i></li></a>
           <li class="nav-item"><a class= "nav-link" href="tel:0411722613‬"><i class="fas fa-phone"></i></a></li>
         </ul>
-   
+     
       </div>
     </nav>
 
@@ -82,12 +82,11 @@
           </div>
 
 
-        </main> 
-          <div class="jumbotron" id="contact">
-              <h2>Ready to get in touch?</h2><br>
-              <a href="mailto:contact@helengrzyb.com.au" class="btn btn-primary">contact@helengrzyb.com.au</a><br> 
+      </main> 
+       <div class="jumbotron" id="contact">
+                <h2>Ready to get in touch?</h2><br>
+                <a href="contact.html" class="btn btn-primary">Drop us a line</a>
           </div>
-
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
