--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
            <li class="nav-item">
@@ -50,8 +50,8 @@
           <li class="nav-item">
             <a class="nav-link" href="index.html#news">News</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="index.html#contact">Contact</a>
+          <li class="nav-item active">
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
               </ul>
           <ul class="navbar-nav">
