--- a/expertise.html
+++ b/expertise.html
@@ -21,7 +21,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
 
-    <nav class="navbar sticky-top navbar-expand-sm navbar-dark bg-dark">
+       <nav class="navbar sticky-top navbar-expand-sm navbar-dark bg-dark">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -50,13 +50,14 @@
             <a class="nav-link" href="index.html#news">News</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="expertise.html#contact">Contact</a>
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
               </ul>
           <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link" href="mailto:contact@helengrzyb.com.au"><i class="far fa-envelope"></i></li></a>
           <li class="nav-item"><a class= "nav-link" href="tel:0411722613‬"><i class="fas fa-phone"></i></a></li>
         </ul>
+     
       </div>
     </nav>
     <main>
@@ -127,8 +128,10 @@
     </main>
       <div class="jumbotron" id="contact">
             <h2>Ready to get in touch?</h2><br>
+            <a href="contact.html" class="btn btn-primary">Contact form</a>
+
             <a href="mailto:contact@helengrzyb.com.au" class="btn btn-primary">contact@helengrzyb.com.au</a><br> 
-        </div>
+      </div>
 
     <footer>
         <ul class="list-inline">
