--- a/case-studies.html
+++ b/case-studies.html
@@ -5,7 +5,6 @@
      <title>Helen Grzyb & Associates</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400&display=swap" rel="stylesheet">
      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
@@ -67,6 +66,19 @@
           <h2 class="mb-0">
             <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
              Case study &ndash; infrastructure/local government engagement review
+            </button>
+          </h2>
+        </div>
+
+
+
+
+  <div class="accordion" id="accordionExample">
+      <div class="card">
+        <div class="card-header" id="headingOne">
+          <h2 class="mb-0">
+            <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+             2019 - Review of community engagement - City of Nedlands
             </button>
           </h2>
         </div>
@@ -153,39 +165,144 @@
             <div class="card">
             <div class="card-header" id="headingFour">
               <h2 class="mb-0">
-                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">Baptistcare 2012 - stakeholder engagement</button>
+                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">2012 Town of Brookton WA and Baptistcare – Aged care contract review</button>
               </h2>
             </div>
             <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
               <div class="card-body">
-                     <h5 class="card-title">Baptistcare 2012</h5>
-                    <p>In 2012, Helen Grzyb and Associates were appointed to undertake a review of Baptistcare's contract with the Town of Brookton for management of the Kalkarni Aged Care facility.</p>
-
-                    <p>The work involved reviewing documentation including contracts and financial reports, undertaking workshops and meeting with key stakeholders of the residential aged care service as well as the adjacent medical service.</p>
-
-                    <p>As a result of this work the contract negotiations between the two parties progressed and an updated contract was agreed which recognised the current operating and policy environment for residential aged care in regional Western Australia; the quality requirements for residential aged care services; the differing needs well as the commonalities of interest between Baptistcare and the Town of Brookton.<br>
-
-                    <p>Reflecting the changing environment for residential aged care, in 2019, Baptistcare took over the service from the Town of Brookton.</p>          
+                 <h5 class="card-title">2012 Town of Brookton WA and Baptistcare – Aged care contract review</h5>
+                 <p>Helen Grzyb and Associates were appointed to undertake a review of Baptistcare's contract with the Town of Brookton for management of the Kalkarni Aged Care facility.</p>
+                 <p>The work involved reviewing documentation including contracts and financial reports, undertaking workshops and meeting with key stakeholders of the residential aged care service as well as the adjacent medical service.</p>
+                 <p>As a result of this work the contract negotiations between the two parties progressed and an updated contract was agreed which recognised the current operating and policy environment for residential aged care in regional Western Australia; the quality requirements for residential aged care services; the differing needs well as the commonalities of interest between Baptistcare and the Town of Brookton.</p>
+                 <p>Reflecting the changing policy and financial environment for residential aged care, in 2019, Baptistcare took over the service from the Town of Brookton.</p>
                 </div>
             </div>
           </div>
         </div>
-      </main>
 
-     <div class="jumbotron" id="contact">
-            <h2>Ready to get in touch?</h2><br>
-            <a href="contact.html" class="btn btn-primary">Drop us a line</a>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+            <div class="card-body">
+
+                <a href="https://www.bgeeng.com/sc-traffic-design/40-market-sectors/ms-transport/mst-traffic-design/329-gateway-vision-wa?tmpl=component">
+                    <img class="card-img-top" src="img/gateway.jpg" alt="gateway highway">
+                </a>
+                <h7 class="text-muted">Gateway Vision WA. Image source: https://www.bgeeng.com/sc-traffic-design/40-market-sectors/ms-transport/mst-traffic-design/329-gateway-vision-wa?tmpl=component </h7>
+                <h5 class="card-title">Case study &ndash; infrastructure/local government engagement review</h5>
+                <p> In 2006, Dr Helen Grzyb was part of the original Main Roads WA (MRWA) Value Assurance Review team which tested the first Value Assurance Review (VAR) of MRWA stakeholder engagement. As a result of this work, Helen is an accredited MRWA VAR Reviewer. Subsequently Helen went on to undertake a further five reviews for MRWA projects:</p>
+
+                <ul>
+                    <li>Albany Ring Road project</li>
+                    <li>City East Alliance project</li>
+                    <li>Gateway Vision project</li>
+                    <li>Mitchell Freeway Extension project</li>
+                </ul>
+
+                <p>Helen is very experienced in undertaking independent reviews including with diverse frameworks and standards. She has developed enhancements to increase outcomes from the review process/result including coaching project staff to increase project engagement expertise.</p>
+
+                <p>As a highly experienced VAR reviewer Helen has utilised the MRWA framework and has adapted review techniques to extend and improve the framework to include:</p>
+
+                <ul>
+                    <li>Real time evaluation</li>
+                    <li>Independent review statement as part of the project business case</li>
+                </ul>
+
+                <p>Helen has since been sought after to undertake stakeholder enagement reviews in the City of Melville and in 2019 for the City of Nedlands.</p>
+                <a href="https://www.melvillecity.com.au/things-to-do/find-venues-parks-and-reserves/shirley-strickland-reserve"><img src="img/Shirely-Strickland-Reserve.jpg"></a>
+                <p class="text-muted">Image source: https://www.melvillecity.com.au/things-to-do/find-venues-parks-and-reserves/shirley-strickland-reserve</p>
+             </div>
+          </div>
+
+          <div class="card">
+            <div class="card-header" id="headingTwo">
+              <h2 class="mb-0">
+                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Review of community engagement - City of Nedlands </button>
+              </h2>
+            </div>
+            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+              <div class="card-body">
+                    <h5 class="card-title">Review of community engagement - City of Nedlands</h5>
+                    <p>In 2019, Helen Grzyb and Associates were appointed by the City of Nedlands to undertake an independent review of its public participation activities.</p>
+                    <p>As well as reviewing the City’s community engagement, the review also assessed the City’s compliance with the Disability Services Regulations (2004) - public participation.</p>
+                    <p>The review tools used were the International Association of Public Participation Quality Standard and the Disability Services Regulations (2004) public participation checklist.</p>
+                    <p>The results of the review were positive, reinforcing the City’s engagement processes and its provisions for information, engagement and consideration in decision-making. Improvements were identified which could continue to reinforce and enhance the robust community engagement ethos and practices undertaken by the City including accessibility for people with a disability.</p>
+                    <img src="img/nedlands.png">
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="card"> 
+            <div class="card-header" id="headingThree">
+              <h2 class="mb-0">
+                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                 2018 - Home based aged care packages in the Mid West region of Western Australia: Access by Aboriginal People – A Snapshot
+                </button>
+              </h2>
+            </div>
+            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                <div class="card-body">
+
+                  <h5 class="card-title">2018 - Home based aged care packages in the Mid West region of Western Australia</h5>
+                  <h5>Access by Aboriginal People – A Snapshot</h5>
+                  <p>Key staff from Geraldton Regional Aboriginal Medical Service (GRAMS) and WA Country Health Service (WACHS) Mid West recognised that there were possible gaps in Aboriginal people having access to home based aged care packages in their region. Informal conversations with colleagues from service providers across the Mid West confirmed this.</p>
+                  <p>As a result, the WA Primary Health Alliance funded a project to undertake a snapshot picture about the reality for Aboriginal people in the three localities in the region and about people’s access to home based aged care packages.</p>
+                  <p>The project was hosted by GRAMS and supported by a project advisory committee comprising staff from GRAMS, WACHS (Mid West), Aboriginal Health Council of Western Australia (AHCWA), Bethanie, Carnarvon Medical Service Aboriginal Corporation (CMSAC).</p>
+                  <p>Helen Grzyb and Associates were appointed to undertake the project in mid 2018.</p>
+                  <p>There was significant buy in from a diverse range of stakeholders. People in government and in the community across the region wanted to work out how best to make a difference for those older Aboriginal people who are eligible but currently outside the home-based aged care system. </p>
+                  <p>A key construct from the project was for a service model which ensures clients are culturally safe – it was seen that this will shift the existing resistance by people to being engaged in the aged care system. As a result of the 2018 project, a trial was established for a centre-based service for people in the Geraldton local community. If successful, this trial could lead the way to significantly change access to home-based services, thus making a positive impact on the quality of life for people in the Mid West region.</p>
+
+                  <img src="img/GRAMS-map.jpg">
+                  <p class="text-muted">Source: DoH, Epidemiology GIS Branch 2015</p>
+
+               </div>
+            </div>
+          </div>
+
+            <div class="card">
+            <div class="card-header" id="headingFour">
+              <h2 class="mb-0">
+                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">2012 Town of Brookton WA and Baptistcare – Aged care contract review</button>
+              </h2>
+            </div>
+            <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
+              <div class="card-body">
+                 <h5 class="card-title">2012 Town of Brookton WA and Baptistcare – Aged care contract review</h5>
+                 <p>Helen Grzyb and Associates were appointed to undertake a review of Baptistcare's contract with the Town of Brookton for management of the Kalkarni Aged Care facility.</p>
+                 <p>The work involved reviewing documentation including contracts and financial reports, undertaking workshops and meeting with key stakeholders of the residential aged care service as well as the adjacent medical service.</p>
+                 <p>As a result of this work the contract negotiations between the two parties progressed and an updated contract was agreed which recognised the current operating and policy environment for residential aged care in regional Western Australia; the quality requirements for residential aged care services; the differing needs well as the commonalities of interest between Baptistcare and the Town of Brookton.</p>
+                 <p>Reflecting the changing policy and financial environment for residential aged care, in 2019, Baptistcare took over the service from the Town of Brookton.</p>
+                </div>
+            </div>
+          </div>
+        </div>
+
+      </main>
+      <div class="jumbotron" id="contact">
+                  <h2>Ready to get in touch?</h2><br>
+                  <a href="contact.html" class="btn btn-primary">Drop us a line</a>
       </div>
-      
+
       <footer>
           <ul class="list-inline">
             <li class="list-inline-item"><a href="https://www.linkedin.com/in/helengrzyb/"><i class="fab fa-linkedin"></i></a></li>
+            <li class="list-inline-item"><a href="#"><i class="fab fa-facebook"></i></a></li>
           </ul>
       </footer>
-
-      <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
 </body>
 </html>
