--- a/index.html
+++ b/index.html
@@ -141,20 +141,20 @@
         <li>Approved provider for the supply of policy and research services: Commissioner for Children and Young People.</li>
       </ul>
       </div>
-        </main>  
-         <div class="jumbotron" id="contact">
-            <h2>Ready to get in touch?</h2><br>
-            <a href="contact.html" class="btn btn-primary">Drop us a line</a><br> 
-        </div>
-
+    </main>  
+      <div class="jumbotron" id="contact">
+                  <h2>Ready to get in touch?</h2><br>
+                  <a href="contact.html" class="btn btn-primary">Drop us a line</a>
+      </div>
 </body>
 
- <footer>
-        <ul class="list-inline">
-          <li class="list-inline-item"><a href="https://www.linkedin.com/in/helengrzyb/"><i class="fab fa-linkedin"></i></a></li>
-        </ul>
 
-        <div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/"     title="Flaticon">www.flaticon.com</a></div>
-    </footer>
+      <footer>
+          <ul class="list-inline">
+            <li class="list-inline-item"><a href="https://www.linkedin.com/in/helengrzyb/"><i class="fab fa-linkedin"></i></a></li>
+            <li class="list-inline-item"><a href="#"><i class="fab fa-facebook"></i></a></li>
+          </ul>
+      </footer>
+
 
 </html>
